--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-fileupload": "^1.4.0",
+        "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.1",
         "pg": "^8.11.1",
         "pg-hstore": "^2.3.4",
