--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "express-fileupload": "^1.4.0",
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.1",
+        "nodemailer": "^6.9.4",
         "pg": "^8.11.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.32.1",
